--- a/README
+++ b/README
@@ -1,10 +1,12 @@
-wda
-===
+
+autoconf
+
+===============================================================================
 
 自动安装集锦
 
 由shell/python/perl等脚本语言组成的自动操作
 
-根据实际应用沉淀的操作记录
-收集的程序git库
-或forked后Diy的git库
+1，根据实际应用沉淀的操作记录
+2，收集的程序git库
+3，或forked后Diy的git库
